# pipevision-ai

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  biome.json  commitlint.config.js  gui-mockup.html  index.html  lefthook.yml  mise.toml  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.agents/: mcp.json  oma-config.yaml
.agents/agents/: debug-investigator.md  docs-curator.md  frontend-engineer.md  pm-planner.md  refactor-engineer.md  research-explorer.md
.agents/config/: defaults.yaml
.agents/results/: plan-browser-inference-001.json  plan-pipevision-ext-001.json  qa-review-browser-inference-001.md  result-backend.md
.agents/skills/: _version.json
.agents/workflows/: orchestrate.md  ultrawork.md  work.md
.antigravitycli/: ecf15824-9455-41e6-8282-bd5ac5a89e79.json
.claude/: settings.json
.claude/agents/: debug-investigator.md  docs-curator.md  frontend-engineer.md  pm-planner.md  qa-reviewer.md  refactor-engineer.md  research-explorer.md
.claude/hooks/: hook-output.ts  hud.ts  oma-hook.sh  test-filter.ts
.codex/: config.toml  hooks.json
.codex/agents/: debug-investigator.toml  docs-curator.toml  frontend-engineer.toml  pm-planner.toml  qa-reviewer.toml  (+2 more)
.cursor/: hooks.json  mcp.json
.gemini/: settings.json
.qwen/: settings.json
.serena/: project.yml
model/: README.md  download.sh  export.py  metadata.yaml  per_class_metrics.csv  pyproject.toml  results.csv  seed_history_inferences.py  upload.sh  usage.md  verify.py
public/: site.webmanifest
src/: main.tsx  sw.ts
(+230 files in other folders)
