[project]
name = "pipevision-model"
version = "0.1.0"
description = "YOLO26m model conversion pipeline: PT -> ONNX FP16 -> Hugging Face Hub"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ultralytics>=8.3",
    "onnxruntime>=1.20",
    "onnx>=1.17",
    "onnxsim>=0.4",
    "huggingface-hub>=0.24",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "opencv-python>=4.10",
    "pillow>=10.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
